--- a/pages/driverQz/index.wxss
+++ b/pages/driverQz/index.wxss
@@ -1,1 +1,110 @@
-/* pages/driverQz/index.wxss */
+page{
+	margin-top: 81rpx;
+}
+.filterWrap{
+	width: 100%;
+	height: 80rpx;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background: #fff;
+	z-index: 3;
+	border-bottom: 1rpx solid #e8e8e8;
+	position: fixed;
+	left: 0;
+	top: 0;
+}
+.pubMod{
+	float: left;
+	height: 70rpx;
+	line-height: 70rpx;
+	font-size: 28rpx;
+	color: #606060;
+	position: relative;
+	margin-left: 30rpx;
+}
+.pubMod i{
+	margin-right: 10rpx;
+	font-size: 30rpx;
+}
+.filterBtn {
+	margin-right: 30rpx;
+}
+.filterBtn text{
+	font-size: 28rpx;
+	color:#606060 ;
+	margin-right:12rpx ;
+}
+.filterBtn i{
+	color:#606060 ;
+	font-size: 26rpx;
+}
+/* qzList */
+.qzListItem{
+	border-bottom: 1rpx solid #e8e8e8;
+	padding: 20rpx 0;
+}
+.qzListItem .imgView{
+	width: 126rpx;
+	height: 126rpx;
+	border-radius: 50%;
+	overflow: hidden;
+	float: left;
+	background: pink;
+}
+.qzListItem .qzListCon{
+	float: left;
+	margin-left: 15rpx;
+	width: 80%;
+	height: 126rpx;
+}
+.qzTit{
+	height: 50rpx;
+	line-height: 50rpx;
+	position: relative;
+}
+.qzTit view{
+	float: left;
+}
+.qzTit view.name{
+	font-size: 30rpx;
+	font-weight: 620;
+	color: #121212;
+}
+.qzTit view.renzheng{
+	margin-left: 15rpx;
+	margin-top: -2rpx;
+}
+.qzTit view.renzheng i{
+	font-size: 36rpx;
+	color: #ffc107;
+}
+.qzTit view.weizhi{
+	float: right;
+	font-size: 24rpx;
+	color: #a9a9a9;
+}
+.qzTit view.weizhi i{
+	font-size: 28rpx;
+	margin-right: 10rpx;
+}
+.qzInfo{
+	height: 40rpx;
+	line-height: 40rpx;
+}
+.qzInfo view{
+	float: left;
+	font-size: 28rpx;
+	color: #121212;
+	margin-right: 15rpx;
+}
+.basicInfo{
+	height: 36rpx;
+	line-height: 36rpx;
+}
+.basicInfo view{
+	float: left;
+	margin-right: 15rpx;
+	font-size: 24rpx;
+	color: #606060;
+}
