--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -26,7 +26,7 @@
 			</navigator>
 		</view>
 		<view class="listTab">
-			<navigator>
+			<navigator url="/pages/trucksTrade/index" hover-class="none">
 				<view class="imgView">
 					<image src="../../images/cczm.jpg"></image>
 				</view>
@@ -45,7 +45,7 @@
 			</navigator>
 		</view>
 		<view class="listTab">
-			<navigator>
+			<navigator url="/pages/potTrade/index" hover-class="none">
 				<view class="imgView">
 					<image src="../../images/cgzm.jpg"></image>
 				</view>
@@ -53,7 +53,7 @@
 			</navigator>
 		</view>
 		<view class="listTab">
-			<navigator>
+			<navigator url="/pages/driverQz/index" hover-class="none">
 				<view class="imgView">
 					<image src="../../images/sjqz.jpg"></image>
 				</view>
