添加司机招聘求职详情
Signed-off-by: simon <simonHlf@163.com>

--- a/pages/basic/getDriverYyy/index.wxml
+++ b/pages/basic/getDriverYyy/index.wxml
@@ -16,3 +16,7 @@
 	<image mode="widthFix" src="../../../images/noData.png"></image>
 	<view class="noDataTxt">暂无记录</view>
 </view>
+<view class="pubBtnWrap" bindtap="addDriverYyy">
+	<image src="../../../images/pub.png"></image>
+	<i class="iconfont icon-tianjia"></i>
+</view>
