--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,7 +16,7 @@
 				</view>
 				<text class="listTabTit">液源地</text>
 			</navigator>
-		</view>
+		</view> 
 		<view class="listTab">
 			<navigator url="/pages/rqMaoyi/index" open-type="switchTab" hover-class="none">
 				<view class="imgView">
@@ -91,12 +91,12 @@
 	<!-- <navigator class="goMore" hover-class="none">
 		<i class="iconfont icon-gengduo"></i>
 	</navigator> -->
-</view>
+</view> 
 <!-- 燃气贸易 -->
 <view class="rqMaoyi">
 	<view class="myTit">
 		<text>燃气贸易</text>
-		<navigator hover-class="none">更多</navigator>
+		<navigator url="/pages/rqMaoyi/index" open-type="switchTab" hover-class="none">更多</navigator>
 	</view>
 	<view class="rqMyList clearfix">
 		<view class="myImg">
@@ -165,7 +165,10 @@
 			</view>
 		</block>
 		<block wx:else>
-			<view>暂无资讯</view>
+			<view class="noZixun">
+				<image src="../../images/noZixun.png"></image>
+				<view>小编正在积极努力写稿中~</view>
+			</view>
 		</block>
 	</view>
 </view>
@@ -176,23 +179,29 @@
 	</view>
 	<view class="zpQzList clearfix">
 		<view class="zpQzItem zpItem">
+			<view class="typeItem zpItem">聘司机</view>
 			<block wx:if="{{wholeIndexData.zpList.length > 0}}">
-				<view class="typeItem zpItem">聘司机</view>
 				<view class="zpQzTit ellip">{{wholeIndexData.zpList[0].cpyName}}</view>
 				<view class="zpQzTxt multiEllip">驾照类型：{{wholeIndexData.zpList[0].jzType}} 要求驾龄{{wholeIndexData.zpList[0].jlYear}} 年龄范围{{wholeIndexData.zpList[0].ageRange}} 公司地址{{wholeIndexData.zpList[0].ageRange.address}}</view>
 			</block>
 			<block wx:else>
-				<view>暂无招聘信息</view>
+				<view class="noZp">
+					<image src="../../images/noZp.png"></image>
+					<view>一大波企业正在路上狂奔~</view>
+				</view>
 			</block>
 		</view>
 		<view class="zpQzItem qzItem">
+			<view class="typeItem qzItem">求职</view>
 			<block wx:if="{{wholeIndexData.qzList.length > 0}}">
-				<view class="typeItem qzItem">求职</view>
 				<view class="zpQzTit">{{wholeIndexData.qzList[0].qzUserName}}</view>
 				<view class="zpQzTxt multiEllip">{{wholeIndexData.qzList[0].userAge}}周岁  {{wholeIndexData.qzList[0].jzType}}驾照   驾龄{{wholeIndexData.qzList[0].jzYear}}年</view>
 			</block>
 			<block wx:else>
-				<view>暂无求职信息</view>
+				<view class="noZp">
+					<image src="../../images/noQz.png"></image>
+					<view>大批司机正在来的路上哟~</view>
+				</view>
 			</block>
 		</view>
 	</view>
