--- a/components/selectArea/selectArea.wxss
+++ b/components/selectArea/selectArea.wxss
@@ -8,6 +8,7 @@ view.areaViewTxt{
   padding-left: 5%;
   float: left;
   color: #121212;
+  font-size: 26rpx;
 }
 .title.noSel{
 	color: #808080;
@@ -49,4 +50,5 @@ view.areaViewTxt{
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, .5);
+  z-index: 100;
 }
