--- a/pages/driverZpDet/index.wxss
+++ b/pages/driverZpDet/index.wxss
@@ -1,1 +1,225 @@
-/* pages/driverZpDet/index.wxss */
+page{
+	background: #efefef;
+	margin-bottom: 120rpx;
+}
+.compNameInfo{
+	background: #fff;
+	border-bottom: 1rpx solid #e8e8e8;
+	padding: 20rpx 30rpx;
+}
+.compName{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 30rpx;
+	color: #121212;
+	font-weight: 620;
+}
+.xinzi{
+	height: 50rpx;
+	line-height: 50rpx;
+}
+.zpTit{
+	font-size: 26rpx;
+	color: #a9a9a9;
+	float: left;
+	margin-right: 20rpx;
+}
+.price{
+	font-size: 30rpx;
+	color: #d32f2f;
+	line-height: 50rpx;
+	font-weight: 620;
+	float: left;
+}
+.welfare{
+	margin-top: 10rpx;
+}
+.welfareItem{
+	float: left;
+	border:1rpx solid #3c7de9;
+	border-radius: 6rpx;
+	height: 38rpx;
+	line-height: 38rpx;
+	font-size: 24rpx;
+	color: #3c7de9;
+	padding: 0 15rpx;
+	margin-right: 20rpx;
+}
+.zhiweiDetInfo{
+	background: #fff;
+	padding:20rpx 30rpx;
+	margin-bottom: 20rpx;
+}
+.zhiweiTit{
+	height: 50rpx;
+	line-height: 50rpx;
+	font-size: 30rpx;
+	color: #121212;
+}
+.yqWrap{
+	height: 50rpx;
+	line-height: 50rpx;
+}
+.yqWrap .yqTit{
+	width: 75rpx;
+	height: 38rpx;
+	line-height: 38rpx;
+	background: #e0ecff;
+	color: #3c7de9;
+	font-size: 24rpx;
+	float: left;
+	text-align: center;
+	margin-top: 6rpx;
+}
+.detYq{
+	float: left;
+	margin-left: 15rpx;
+	color: #121212;
+	font-size: 28rpx;
+}
+.detYq text{
+	margin-right: 15rpx;
+}
+.gwzzTit,
+.gwzzCon{
+	font-size: 26rpx;
+	color: #606060;
+}
+.gwzzTit{
+	margin:15rpx 0;
+}
+.pubUser,
+.compAdd{
+	background: #fff;
+	margin-bottom: 20rpx;
+}
+.pubTit{
+	height: 80rpx;
+	line-height: 80rpx;
+	border-bottom: 1rpx solid #e8e8e8;
+	font-size: 30rpx;
+	color: #121212;
+}
+.sellerTel{
+	background: #fff; 
+	padding:20rpx 0;
+}
+.sellerTel .sellerImg{
+	width:80rpx;
+	height: 80rpx;
+	border-radius: 50%;
+	background: pink;
+	float: left;
+}
+.sellerTel .sellerImg image{
+	width:80rpx;
+	height: 80rpx;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.rqDevCompName{
+	width: 66%;
+	height: 80rpx;
+	float: left;
+	margin-left: 15rpx;
+	color: #121212;
+	font-size: 28rpx;
+}
+.lxrNameTel{
+	font-size: 28rpx;
+	color: #121212;
+}
+.rqDevName{
+	font-size: 24rpx;
+	color: #606060;
+	margin-top: 15rpx;
+}
+.telInfo{
+	float: left;
+	line-height: 80rpx;
+	margin-left: 15rpx;
+	color: #121212;
+	font-size: 28rpx;
+}
+.phoneCall{
+	float: right;
+	width: 20%;
+	height: 80rpx;
+	line-height: 80rpx;
+	text-align: right;
+}
+.phoneCall i{
+	color: #1cb022;
+	font-size: 40rpx;
+}
+.address {
+	padding: 20rpx 0;
+}
+.address i,
+.address view{
+	float: left;
+}
+.address i{
+	font-size: 26rpx;
+	color: #a9a9a9;
+	margin:5rpx 10rpx 0;
+}
+.address view{
+	font-size: 26rpx;
+	color: #606060;
+}
+.botFun{
+	width: 100%;
+	height: 100rpx;
+	background: #fff;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: 100;
+}
+.botFun .focusView{
+	width: 120rpx;
+	float: left;
+	margin-left: 30rpx;
+	text-align: center;
+}
+.botFun .focusView:last-child{
+	margin-left: 0;
+}
+.botFun .focusView view{
+	height: 50rpx;
+	line-height: 50rpx;
+}
+.botFun .focusView view i.icon-guanzhu,
+.botFun .focusView view i.icon-wodexiaoxi{
+	font-size: 34rpx;
+	color:#606060 ;
+}
+.botFun .focusView view i.icon-guanzhu1{
+	font-size: 38rpx;
+	color: #d32f2f;
+}
+.botFun .focusView view.iconTxt{
+	color:#606060 ;
+	font-size: 28rpx;
+	margin-top: -10rpx;
+}
+.botFun .focusView view:first-child{
+	margin-top: 10rpx;
+}
+.buyGasBtn,
+.notBuyGasBtn{
+	width: 400rpx;
+	height: 66rpx;
+	line-height: 66rpx;
+	color: #fff;
+	font-size: 28rpx;
+	text-align: center;
+	float: right;
+	margin-right: 30rpx;
+	margin-top: 18rpx;
+	border-radius: 100rpx;
+}
+.buyGasBtn{
+	background:#ffc107 ;
+}
