--- a/style/driverZpQz.wxss
+++ b/style/driverZpQz.wxss
@@ -72,6 +72,7 @@ page{
 	background: #efefef;
 	text-align: center;
 	line-height: 90rpx;
+	position: relative;
 }
 .modDetCon .userHead i{
 	font-size: 38rpx;
@@ -82,6 +83,9 @@ page{
 	height: 100%;
 	border-radius: 50%;
 	overflow: hidden;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 .modDetCon i.icon-gengduo{
 	float: right;
@@ -240,4 +244,7 @@ page{
 }
 .fuliItem.active image{
 	display: block;
+}
+.modConItem .modCon picker view.noSel{
+	color: #808080;
 }
