完成司机招聘求职模块
Signed-off-by: simon <simonHlf@163.com>

--- a/pages/basic/getCpyList/index.wxml
+++ b/pages/basic/getCpyList/index.wxml
@@ -9,6 +9,7 @@
 		data-key="{{index}}"
 		data-cpyname="{{item.cpyName}}"
 		data-cpyid="{{item.cpyId}}"
+		data-dz="{{item.address}}"
 		bindtap="selectCpy" 
 	>{{item.cpyName}}</view>
 </view> 
