--- a/pages/msg/index.wxss
+++ b/pages/msg/index.wxss
@@ -1,33 +1,45 @@
-.appointent-date{
-  padding:10rpx 30rpx 40rpx 30rpx;
-  background: #fff;
-   box-sizing: border-box;
+page{
+	background: #efefef;
 }
- .appointent-date-div{
-  display:inline-block;
-   width:20%;
-   text-align: center;
-   margin-top: 30rpx;
- }
-.flex-item{
-   display: inline-block;
-   width:96rpx;
-   height: 88rpx;
-   font-size: 26rpx;
-   border:2rpx solid #999;
-  text-align: center;
-   border-radius: 10rpx;
-   color: #999;
-   cursor: pointer;
-   line-height: 30rpx;
+.msgListItem{
+	margin-bottom: 35rpx;
 }
- .data_name{
-   font-size: 36rpx;
-   line-height: 52rpx;
-   
- }
- .active-tag .flex-item{
-   background: #c8321e;
-   color:#fff;  
-   border:1rpx solid #fff;
- }
+.msgListItem .pubTime{
+	width: 165rpx;
+	height: 40rpx;
+	line-height: 40rpx;
+	border-radius: 100rpx;
+	background: #cccccc;
+	color: #fff;
+	font-size: 24rpx;
+	text-align: center;
+	margin:20rpx auto 0;
+}
+.msgListCon{
+	padding: 20rpx 15rpx;
+	background: #fff;
+	font-size: 28rpx;
+	color: #121212;
+	border-radius: 8rpx;
+	margin-top: 15rpx;
+	position: relative;
+}
+.innerCon.hasMore{
+	width: 94%;
+}
+.msgListCon .moreBtn{
+	width: 6%;
+	height: 100%;
+	text-align: right;
+	position: absolute;
+	right:15rpx;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+.msgListCon i{
+	font-size: 28rpx;
+	color:#cccccc ;
+	
+}
