--- a/pages/driverZp/index.wxml
+++ b/pages/driverZp/index.wxml
@@ -10,44 +10,54 @@
 	</view>
 </view>
 <view class="zpList padd">
-	<view class="zpListItem">
+	<view class="zpListItem"
+		wx:for="{{qzListData}}"
+		wx:key="index"
+		data-id="{{item.zpId}}"
+		bindtap="getZpDet"
+	>
 		<view class="compName">
-			<view class="compNameTxt ellip">京东物流有限公司</view>
-			<view class="price">6千/月</view>
+			<view class="compNameTxt ellip">{{item.companyName}}</view>
+			<block wx:if="{{item.wage == 0}}">
+				<view class="price">面议</view>
+			</block>
+			<block wx:else>
+				<view class="price">{{item.wage}}千/月</view>
+			</block>
+			
 		</view>
 		<view class="tiaojian clearfix">
-			<view>濮阳</view>
+			<view>{{item.city}}</view>
 			<view>|</view>
-			<view>C1驾照</view>
+			<view>{{item.jzType}}驾照</view>
 			<view>|</view>
-			<view>驾龄1-3年</view>
+			<view>驾龄{{item.jlYear}}年</view>
 			<view>|</view>
-			<view>初中</view>
+			<view>{{item.education}}</view>
 		</view>
 		<view class="welfare clearfix">
-			<view class="welfareItem">五险一金</view>
-			<view class="welfareItem">包食宿</view>
-		</view>
-	</view>
-	
-	<view class="zpListItem">
-		<view class="compName">
-			<view class="compNameTxt ellip">京东物流有限公司</view>
-			<view class="price">6千/月</view>
-		</view>
-		<view class="tiaojian clearfix">
-			<view>濮阳</view>
-			<view>|</view>
-			<view>C1驾照</view>
-			<view>|</view>
-			<view>驾龄1-3年</view>
-			<view>|</view>
-			<view>初中</view>
-		</view>
-		<view class="welfare clearfix">
-			<view class="welfareItem">五险一金</view>
-			<view class="welfareItem">包食宿</view>
-			<view class="welfareItem">话费补助</view>
+			<view class="welfareItem"
+				wx:for="{{item.welfare}}"
+				wx:key="index"
+			>{{item}}</view>
 		</view>
 	</view>
 </view>
+<view class="noDataList" style="margin-top: 320rpx;" hidden="{{isHasDataFlag}}">
+	<image mode="widthFix" src="../../images/noData.png"></image>
+	<view class="noDataTxt">暂无记录</view>
+</view> 
+<block wx:if="{{isHasDataFlag}}">
+	<view class="loadingIcon">
+		<block wx:if="{{loading}}">
+			<image src="../../images/loading-bars.svg" mode="widthFix"></image>
+		</block>
+		<block wx:else>
+			<view class="noDataTxt">
+				<text>——————</text>
+				<text>我是有底线的~</text>
+				<text>——————</text>
+			</view>
+		</block>
+	</view> 
+</block>
