--- a/pages/hangyeZixun/index.wxss
+++ b/pages/hangyeZixun/index.wxss
@@ -8,6 +8,10 @@
 	height: 108rpx;
 	background: pink;
 }
+.listNewsImg image{
+	width: 100%;
+	height: 100%;
+}
 .listNewsCon{
 	float: left;
 	margin-left: 20rpx;
