--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -111,7 +111,6 @@ page{
 	width: 100rpx;
 	height: 100rpx;
 	float: left;
-	background: pink;
 }
 .myImg image{
 	width: 100%;
@@ -218,16 +217,14 @@ page{
 	border-bottom: none;
 	padding-bottom: 0;
 }
-.listNews navigator{
-	width: 100%;
-	height:108rpx ;
-	display: block;
-}
 .listNewsImg{
 	float: left;
 	width: 145rpx;
 	height: 108rpx;
-	background: pink;
+}
+.listNewsImg image{
+	width: 100%;
+	height: 100%;
 }
 .listNewsCon{
 	float: left;
