--- a/pages/pubDriverZp/index.wxml
+++ b/pages/pubDriverZp/index.wxml
@@ -1,4 +1,5 @@
 <form bindsubmit="formSubmit">
+	<view class="beizhu padd">*注：每个公司最多可发布招聘信息数量为5条!</view>
 	<view class="modItem padd">
 		<view class="modTit">
 			<i class="iconfont icon-gongsixinxi"></i>
@@ -7,14 +8,18 @@
 		</view>
 		<view class="modCon">
 			<view class="modConWrap clearfix">
-				<view class="modConItem">
+				<view class="modConItem" bindtap="">
 					<view class="modTit">公司名称</view>
-					<view class="modCon smPadd">
-						<input type="text" value="{{compName}}" placeholder="请选择公司" disabled/>
+					<view class="modCon smPadd" bindtap="getCpyList">
+						<input placeholder="请选择公司" value="{{cpyName}}" disabled/>
+						<input type="text" name="cpyId" value="{{cpyId}}" hidden="{{true}}" diasbled/>
 						<i class="iconfont icon-gengduo"></i>
 					</view>
 				</view>
 			</view>
+			<block wx:if="{{!isCanPubFlag}}">
+				<view class="warnInfop">*当前公司发布招聘信息数量已超过5条，暂不能继续发布！</view>
+			</block>
 			<view class="modConWrap clearfix">
 				<view class="modConItem">
 					<view class="modTit">公司地址</view>
@@ -50,8 +55,9 @@
 		<view class="modConWrap clearfix">
 			<view class="modConItem">
 				<view class="modTit">薪资/月</view>
-				<view class="modCon wholeWid">
-					<input type="number" name="xinzi" value="{{xinzi}}"  placeholder-class="numberHolder" placeholder="请输入招聘薪资待遇(0为面议)"maxlength="6"/>
+				<view class="modCon smPadd">
+					<input type="number" name="xinzi" value="{{xinzi}}"  placeholder-class="numberHolder" placeholder="请输入招聘薪资待遇(0为面议)" maxlength="5"/>
+					<text class="unit">元</text>
 				</view>
 			</view>
 		</view>
@@ -68,17 +74,21 @@
 			<view class="modConItem short">
 				<view class="modTit">驾龄</view>
 				<view class="modCon">
-					<input type="number" name="driveYear" value="{{driveYear}}" placeholder="请输入驾龄" placeholder-class="numberHolder" maxlength="3"/>
-					<text class="unit">年</text>
-				</view>
+					<picker bindchange="bindJlYearPicker" range="{{jlYear}}" range-key="{{'name'}}">
+					   <view class="{{isSelJl ? '' : 'noSel'}}">{{driveYearName}}</view>
+					</picker>
+					<i class="iconfont icon-gengduo"></i>
+				</view> 
 			</view>
 		</view>
 		<view class="modConWrap clearfix">
 			<view class="modConItem long">
 				<view class="modTit">年龄要求</view>
 				<view class="modCon">
-					<input type="number" name="age" value="{{age}}" placeholder="请输入年龄要求" placeholder-class="numberHolder" maxlength="2"/>
-					<text class="unit">岁</text>
+					<picker bindchange="bindAgePicker" range="{{ageArr}}" range-key="{{'name'}}">
+					   <view class="{{isSelAge ? '' : 'noSel'}}">{{ageName}}</view>
+					</picker>
+					<i class="iconfont icon-gengduo"></i>
 				</view>
 			</view>
 			<view class="modConItem short">
@@ -94,8 +104,9 @@
 		<view class="modConWrap clearfix">
 			<view class="modConItem">
 				<view class="modTit">招聘人数</view>
-				<view class="modCon wholeWid">
+				<view class="modCon smPadd">
 					<input type="number" name="zprs" value="{{zprs}}" placeholder-class="numberHolder" placeholder="请输入招聘人数" maxlength="6"/>
+					<text class="unit">人</text>
 				</view>
 			</view>
 		</view>
@@ -103,8 +114,8 @@
 			<view class="modConItem">
 				<view class="modTit">工作年限</view>
 				<view class="modCon smPadd">
-					<picker bindchange="bindWorkExpPicker" range="{{workExpArr}}">
-					   <view class="{{isSelNx ? '' : 'noSel'}}">{{gznx}}</view>
+					<picker bindchange="bindWorkExpPicker" range="{{jlYear}}" range-key="{{'name'}}">
+					   <view class="{{workYear ? '' : 'noSel'}}">{{workYearName}}</view>
 					</picker>
 					<i class="iconfont icon-gengduo"></i>
 				</view>
