--- a/style/sellerDet.wxss
+++ b/style/sellerDet.wxss
@@ -160,6 +160,7 @@ page{
 	float: left;
 	margin-left: 30rpx;
 	text-align: center;
+	position: relative;
 }
 .botFun .focusView:last-child{
 	margin-left: 0;
